--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "darkmode",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
+    "raw-loader": "^0.5.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
